# scrapy-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: publish.yml
examples/: README.md  scrapy.cfg  urls.csv
examples/dorm_capacity/: settings.py
examples/dorm_capacity/spiders/: generic.py
examples/dorm_capacity/utils/: models.py  text.py
examples/dorm_capacity/utils/llm/: main.py  utils.py
examples/results/: generic.jsonl
llm_scraper/: items.py  settings.py
llm_scraper/spiders/: generic.py
llm_scraper/utils/llm/: main.py
scrapy_llm/: config.py  handler.py  types.py  utils.py
