[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy_llm"
version = "0.1.0"
description = "LLM integration for Scrapy"
readme = "README.md"
authors = [{ name = "blacksuan19", email = "py@blacksuan19.dev" }]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "scrapy",
    "html2text",
    "instructor",
    "litellm",
    "pandas",
    "pydantic",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "wheel"]


[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"scrapy_llm/__init__.py" = ['__version__ = "{version}"']
